Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,21 +52,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = (1, 2)\n",
+    "b = np.array((4, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-a8486d956ca0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mnumber\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "for number in 10:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10):\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in a:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3 -4]\n",
+      "[-3 -4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in a:\n",
+    "    number = a - b\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating the Manhattan distance:\n",
+      "7.0\n",
+      "Calculating the Euclidean distance:\n",
+      "5.0\n",
+      "Calculating the Minkowski distance:\n",
+      "4.498\n"
+     ]
+    }
+   ],
+   "source": [
     "import numpy as np\n",
     "\n",
-    "# Complete this function! \n",
-    "def distance():\n",
-    "    pass\n",
     "\n",
-    "test_point_1 = (1, 2)\n",
-    "test_point_2 = (4, 6)\n",
-    "print(distance(test_point_1, test_point_2)) # Expected Output: 5.0\n",
-    "print(distance(test_point_1, test_point_2, c=1)) # Expected Output: 7.0\n",
-    "print(distance(test_point_1, test_point_2, c=3)) # Expected Output: 4.497941445275415"
+    "def calculate_distance(a, b, c=2, verbose=True):\n",
+    "    \"\"\"\n",
+    "    Calculates the distance of two arrays. Returns a float.\n",
+    "    \"\"\"\n",
+    "    if verbose and c==1:\n",
+    "        print(\"Calculating the Manhattan distance:\")\n",
+    "    elif verbose and c==2:\n",
+    "        print(\"Calculating the Euclidean distance:\")\n",
+    "\n",
+    "    elif verbose and c>2:\n",
+    "        print(\"Calculating the Minkowski distance:\")\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "    diff_ab = a - b\n",
+    "    abs_ab = np.absolute(diff_ab)\n",
+    "    power_ab = abs_ab**c\n",
+    "    sum_ab = power_ab.sum()\n",
+    "    root_ab = np.power(sum_ab, 1/c)\n",
+    "    output = np.round(root_ab, 3)\n",
+    "\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "\n",
+    "i = np.array([1, 2])\n",
+    "j = np.array([4, 6])\n",
+    "\n",
+    "for num in [1, 2, 3]:\n",
+    "    output = calculate_distance(a=i, b=j, c=num)\n",
+    "    print(output)\n"
    ]
   },
   {
@@ -88,11 +244,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating the Euclidean distance:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "17.94"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "   # Expected Output: 17.939899665271266"
+    "# Expected Output: 17.939899665271266\n",
+    "i = (-2, -3.4, 4, 15, 7)\n",
+    "j = np.array([3, -1.2, -2, -1, 7])\n",
+    "\n",
+    "calculate_distance(a=i, b=j, c=2)"
    ]
   },
   {
@@ -109,11 +287,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating the Manhattan distance:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "   # Expected Output: 20"
+    "   # Expected Output: 20\n",
+    "i = np.array([0, 0, 0, 7, 16, 2, 0, 1, 2, 1])\n",
+    "j = np.array([1, -1, 5, 7, 14, 3, -2, 3, 3, 6])\n",
+    "\n",
+    "calculate_distance(a=i, b=j, c=1)"
    ]
   },
   {
@@ -130,11 +330,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating the Minkowski distance:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.269"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "   # Expected Output: 5.268789659188307"
+    "   # Expected Output: 5.268789659188307\n",
+    "i = np.array([-2, 7, 3.4])\n",
+    "j = np.array([3, 4, 1.5])\n",
+    "\n",
+    "calculate_distance(a=i, b=j, c=3.5)"
    ]
   },
   {
@@ -163,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
